--- a/laravel/proyecto_integrador/public/css/header.css
+++ b/laravel/proyecto_integrador/public/css/header.css
@@ -29,10 +29,10 @@ input:focus {
     outline: none;
 }
 
-/* .input-group-text:focus-within { Podemos darle estilos al seleccionar.
-    border: 1px solid goldenrod;
+.input-group-text:focus-within { 
+    border: 1px solid whitesmoke;
     border-radius: 5px;
-} */
+}
 
 a img {
     width: 50px;
@@ -57,6 +57,7 @@ a img {
     border-radius: 15px;
     color: whitesmoke;
     border-color: black;
+    border-style: solid;
 }
 
 .iniciar-sesion {
@@ -70,5 +71,32 @@ a {
 }
 
 a:visited {
+    color: whitesmoke;
+}
+
+footer {
+    background-color: #444444;
+    bottom: 0;
+    position: fixed;
+    width: 100%;
+}
+
+footer p {
+    margin: 0;
+    color: whitesmoke;
+    text-align: center;
+}
+
+footer ul {
+    list-style: none;
+    padding-inline-start: 0;
+}
+
+footer .container {
+    padding-top: 10px;
+}
+
+
+footer h3 {
     color: whitesmoke;
 }
