--- a/laravel/proyecto_integrador/public/css/map.css
+++ b/laravel/proyecto_integrador/public/css/map.css
@@ -1,20 +1,24 @@
+
+
 @import url('https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 *{
     font-family: 'Inria Sans', sans-serif;
 }
-#fondo {
-    width: 100%;
-}
 
-.container-slide {
-    width: 100%;
-}
 
-.slider p {
-    font-size: 96px;
+#map { height: 55vh; width: 90%;
+    border: 1px solid black;
+    border-radius: 15px;
 }
-
-.carousel-item {
-    display: flex ;
+#Locales{
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    font-size: x-large;
+    gap: 10px;
+}
+#Locales h1{
+    text-align: center;
 }
