--- a/laravel/proyecto_integrador/public/css/historia.css
+++ b/laravel/proyecto_integrador/public/css/historia.css
@@ -18,7 +18,7 @@
 .section-title span{
     font-size:24px;
     font-weight:bold;
-    color:grey;
+    color:#444444;
     text-transform: uppercase;
 }
 .ImagenesHistoria{
