--- a/laravel/proyecto_integrador/public/css/map.css
+++ b/laravel/proyecto_integrador/public/css/map.css
@@ -6,13 +6,16 @@
     font-family: 'Inria Sans', sans-serif;
 }
 
-
-#map { height: 55vh; width: 90%;
+#map { height: 55vh; width: 85%;
     border-radius: 15px;
+    box-shadow:10px 10px 15px rgba(0,0,0,0.5);
+}
+.container-fluid .section-title{
+    text-align: center;
 }
 #Locales{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     font-size: x-large;
@@ -21,3 +24,119 @@
 #Locales h1{
     text-align: center;
 }
+.section-title{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin: 20px 0;
+}
+.section-title::before,
+.section-title::after{
+    content: "";
+    flex: 1;
+    height:2px;
+    background-color:green;
+}
+.section-title span{
+    font-size:24px;
+    font-weight:bold;
+    color:#444444;
+    text-transform: uppercase;
+}
+
+.Principal{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.Principal{
+    width: 100%;
+    padding-left: 10%;
+    padding-right: 2%;
+}
+
+.container-carta {
+    position: relative;
+    width: 190px;
+    height: 254px;
+}
+
+.card {
+    position: relative;
+    width: 190px;
+    height: 254px;
+    background: #f5f5f5;
+    border-radius: 8px;
+    color: #232323;
+    padding: 16px;
+    border: 1px solid #232323;
+    transition: all .5s ease-in-out;
+    overflow: hidden;
+    box-shadow:10px 10px 15px rgba(0,0,0,0.5);
+}
+
+.card-hidden {
+    display: flex;
+    transform: translateY(200%);
+    flex-direction: column;
+    gap: .5rem;
+    transition: transform .5s ease-in, opacity .3s ease-in;
+    opacity: 0;
+}
+.card:hover {
+    transform: translate(-15px, -15px);
+    border-color: #5bc0eb;
+}
+
+.card:hover .card-hidden {
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.card:hover .title {
+    transform: translateY(200%);
+}
+
+.title {
+    position: absolute;
+    bottom: 1rem;
+    font-weight: 700;
+    font-size: 1.5rem;
+    transition: transform .25s ease-out;
+}
+
+.title-in {
+    font-weight: 700;
+    font-size: 1.25rem;
+}
+
+.button {
+    display: inline-flex;
+    justify-content: center;
+    padding: 8px;
+    border-radius: 24px;
+    font-weight: 600;
+    background-color: green;
+    cursor: pointer;
+    transition: background-color .3s ease-in-out;
+}
+
+.button:hover {
+    background-color: grey;
+}
+.row.containerCartas {
+    transform: translateX(-10%);  /* Desplaza el contenedor de las cartas hacia la izquierda */
+}
+.row.containerCartas {
+    margin-left: -4%;  /* Ajusta el margen izquierdo para mover las cartas */
+}
+
+@media(min-width: 768px){
+    .Principal{
+        padding-left: 15%;
+    }
+}
+
+
