Mas en home y Vista de productos por categoria

--- a/laravel/proyecto_integrador/public/css/header.css
+++ b/laravel/proyecto_integrador/public/css/header.css
@@ -8,6 +8,7 @@
     animation: textoMov 5s linear infinite;
     white-space: nowrap;
     animation-timing-function: linear;
+    animation-direction: alternate;
 
 }
 .logo {
