--- a/laravel/proyecto_integrador/public/css/categoria.css
+++ b/laravel/proyecto_integrador/public/css/categoria.css
@@ -2,14 +2,15 @@
 *{
     font-family: 'Inria Sans', sans-serif;
 }
+
 .tituloCategorias{
     display: flex;
     justify-content: center;
     align-items: center;
     font-size:x-large;
 }
-.carta {
 
+.carta {
     --font-color: #323232;
     --font-color-sub: #666;
     --bg-color: #fff;
@@ -37,9 +38,8 @@
     max-width: 100%;
     height: 100%;
     object-fit: contain;
-
-
 }
+
 .carta-img{
     display: flex;
     justify-content: center;
@@ -47,7 +47,6 @@
     max-height: 45%;
 
 }
-
 
 .carta-title {
     font-size: 20px;
@@ -117,4 +116,11 @@
 
 .carta-btn:active {
     transform: translateY(3px);
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
 }
