--- a/laravel/proyecto_integrador/public/css/header.css
+++ b/laravel/proyecto_integrador/public/css/header.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+*{
+    font-family: 'Inria Sans', sans-serif;
+}
+
 .ofertas-deslizando {
     background-color: black;
     color: whitesmoke;
@@ -60,3 +65,8 @@ header {
     box-shadow: none;   /* Elimina cualquier sombra si la hay */
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
