--- a/laravel/proyecto_integrador/public/css/perfilUsuario.css
+++ b/laravel/proyecto_integrador/public/css/perfilUsuario.css
@@ -66,3 +66,8 @@ body {
 .iconoPerfil {
     filter: drop-shadow(5px 5px 5px black);
 }
+
+.listaOpciones a{
+    text-decoration: none;
+    color: black;
+}
