--- a/laravel/proyecto_integrador/public/css/productosCliente.css
+++ b/laravel/proyecto_integrador/public/css/productosCliente.css
@@ -6,3 +6,6 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 h1 {
     text-align: center;
 }
+.botonAgregar{
+    position: sticky;
+}
