--- a/laravel/proyecto_integrador/public/css/nosotros.css
+++ b/laravel/proyecto_integrador/public/css/nosotros.css
@@ -10,6 +10,13 @@
     background-attachment: fixed;
     background-size: cover;
 }
+.conteiner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Asegura que el contenedor ocupe toda la altura de la ventana */
+    margin: 0;
+}
 
 .col{
     display: flex;
@@ -19,36 +26,81 @@
     min-height: 100px;
 
 }
-.presentacion{
+
+.card-info {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    border-radius: 30px;
-    flex-grow: 2;
-    width: 95%;
-
+    transition: transform .2s ease, opacity .2s ease;
 }
-.imagen{
-    border: black solid 1px;
-    background-color: darkslategray;
-    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
-    width: 100%;
-    height: 50%;
 
-
+/*Image*/
+.card-avatar {
+    --size: 60px;
+    background: linear-gradient(to top, #f1e1c1 0%, #fcbc97 100%);
+    width: var(--size);
+    height: var(--size);
+    border-radius: 50%;
+    transition: transform .2s ease;
+    margin-bottom: 1rem;
 }
-.texto{
+
+
+/*Card footer*/
+.card-social {
+    transform: translateY(200%);
     display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-self: start;
-    border: black 1px solid;
+    justify-content: space-around;
     width: 100%;
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
+    opacity: 0;
+    transition: transform .2s ease, opacity .2s ease;
+}
 
+.card-social__item {
+    list-style: none;
+}
+
+.card-social__item svg {
+    display: block;
+    height: 18px;
+    width: 18px;
+    fill: #515F65;
+    cursor: pointer;
+    transition: fill 0.2s ease ,transform 0.2s ease;
+}
+
+/*Text*/
+.card-title {
+    color: #333;
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: 2rem;
+}
+
+.card-subtitle {
+    color: #859ba8;
+    font-size: 0.8em;
+}
+
+.card:hover {
+    box-shadow: 0 8px 50px #23232333;
+}
+
+.card:hover .card-info {
+    transform: translateY(-5%);
+}
+
+.card:hover .card-social {
+    transform: translateY(100%);
+    opacity: 1;
+}
+
+.card-social__item svg:hover {
+    fill: #232323;
+    transform: scale(1.1);
+}
+
+.card-avatar:hover {
+    transform: scale(1.1);
 }
