Agrego cambios menores

--- a/laravel/proyecto_integrador/public/css/footer.css
+++ b/laravel/proyecto_integrador/public/css/footer.css
@@ -39,7 +39,7 @@ footer ul li a {
 }
 
 footer ul li a:hover {
-    color: #28a745; /* Verde claro para hover */
+    color: #ffcc00; /* Verde claro para hover */
 }
 
 /* Responsividad */
