--- a/laravel/proyecto_integrador/public/css/header.css
+++ b/laravel/proyecto_integrador/public/css/header.css
@@ -3,6 +3,18 @@
     font-family: 'Inria Sans', sans-serif;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Oswald:wght@200..700&display=swap');
+
+/* <uniquifier>: Use a unique and descriptive class name
+<weight>: Use a value from 200 to 1000 */
+
+.nunito-title {
+  font-family: "Oswald", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
 .ofertas-deslizando {
     background-color: black;
     color: whitesmoke;
